fix: dot alignment

--- a/src/TileSlider/TileSlider.module.scss
+++ b/src/TileSlider/TileSlider.module.scss
@@ -44,3 +44,10 @@
   transform: translateY(-100%);
 }
 
+.dots {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-top: 12px;
+}
